# sqlfluff-pyspark

./: .coverage  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: build-and-publish.yml  ci.yml  release.yml  test.yml
src/sqlfluff_pyspark/: lint.py
tests/: test_lint.py
